--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,14 @@
     </title>
 {% load static %}
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="{% static 'Css.css' %}">
+   <link rel="stylesheet" href="{% static '/frontline/Css.css' %}">
 
    <link rel="icon" href="{% static 'Image/Logo.jpg' %}">
-   <link rel="stylesheet" type="text/css" href="{% static 'Style/css/all.min.css' %}">
+   <link rel="stylesheet" type="text/css" href="{% static '/frontline/Style/css/all.min.css' %}">
 
 <!-- Start WOWSlider.com HEAD section -->
-<link rel="stylesheet" type="text/css" href="/static/engine1/style.css" />
-<script type="text/javascript" src="/static/engine1/jquery.js"></script>
+<link rel="stylesheet" type="text/css" href="/static/frontline/engine1/style.css" />
+<script type="text/javascript" src="/static/frontline/engine1/jquery.js"></script>
 <!-- End WOWSlider.com HEAD section -->
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -46,5 +46,5 @@
 {% endblock %}
 
 </body>
-<script src="{% static 'Script/JS.js' %}"> </script>
+<script src="{% static '/frontline/Script/JS.js' %}"> </script>
 </html>
