--- a/templates/index.html
+++ b/templates/index.html
@@ -48,20 +48,20 @@ Gagan Mathematics-Never Stop Learning
 <!-- Start WOWSlider.com BODY section -->
 <div id="wowslider-container1">
   <div class="ws_images"><ul>
-      <li><img src="/static/data1/images/1.jpg" alt="" title="" id="wows1_0"/>
+      <li><img src="/static/frontline/data1/images/1.jpg" alt="" title="" id="wows1_0"/>
   </li>
-      <li><a href="http://wowslider.net"><img src="/static/data1/images/2.jpg" alt="css slideshow" title="" id="wows1_1"/></a></li>
-      <li><img src="/static/data1/images/3.jpg" alt="" title="" id="wows1_2"/></li>
+      <li><a href="http://wowslider.net"><img src="/static/frontline/data1/images/2.jpg" alt="css slideshow" title="" id="wows1_1"/></a></li>
+      <li><img src="/static/frontline/data1/images/3.jpg" alt="" title="" id="wows1_2"/></li>
     </ul></div>
     <div class="ws_bullets"><div>
-      <a href="#" title=""><span><img src="/static/data1/tooltips/1.jpg" alt=""/>1</span></a>
-      <a href="#" title=""><span><img src="/static/data1/tooltips/2.jpg" alt=""/>2</span></a>
-      <a href="#" title=""><span><img src="/static/data1/tooltips/3.jpg" alt=""/>3</span></a>
+      <a href="#" title=""><span><img src="/static/frontline/data1/tooltips/1.jpg" alt=""/>1</span></a>
+      <a href="#" title=""><span><img src="/static/frontline/data1/tooltips/2.jpg" alt=""/>2</span></a>
+      <a href="#" title=""><span><img src="/static/frontline/data1/tooltips/3.jpg" alt=""/>3</span></a>
     </div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">javascript photo gallery</a> by WOWSlider.com v9.0</div>
   <div class="ws_shadow"></div>
   </div>
-  <script type="text/javascript" src="/static/engine1/wowslider.js"></script>
-  <script type="text/javascript" src="/static/engine1/script.js"></script>
+  <script type="text/javascript" src="/static/frontline/engine1/wowslider.js"></script>
+  <script type="text/javascript" src="/static/frontline/engine1/script.js"></script>
   <!-- End WOWSlider.com BODY section -->
 
 
