--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
         {% block title %}
         {% endblock %}
     </title>
-{% load static from staticfiles %}
+{% load static %}
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="{% static 'Css.css' %}">
 
