--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     <div id="backdrop"></div>
 
     <section id='container1'>
-      <img id="img_1" src="{% static 'Image\Logo.jpg' %}" width="100px" height="100px">
+      <img id="img_1" src="{% static 'Image\Logo.JPG' %}" width="100px" height="100px">
       <button id='a'>NEVER STOP<br>LEARNING</button>
       <i class="fas fa-ellipsis-v" id="b"></i>
       <i class="fas fa-ellipsis-v" id="c"></i>
