--- a/templates/add_user_data.html
+++ b/templates/add_user_data.html
@@ -7,13 +7,13 @@ New Student Registration
 {% block content %}
 <div id="container4">
     <br>
-     {% if messages %}
-<ul>
-	{% for message in messages %}
-	   <li id="la1">{{ message }}</li>
-	{% endfor %}
-</ul>
-{% endif %}
+       {% if messages %}
+        {% for message in messages %}
+         {% if message.tags %}  <script>alert("{{ message }}")</script> {% endif %}
+
+        {% endfor %}
+
+    {% endif %}
       <form method="POST" action="{% url 'add_user_data' %}">
     <b id='k'>Enter User Name : </b>
     <input type='text' size="60" id='e1' name = 'name' required>
