--- a/static/Css.css
+++ b/static/Css.css
@@ -616,7 +616,7 @@ border-radius : 5px;
 #h42{
 padding : 5px 10px 5px 10px;
 margin-top : 40px;
-text-align : center;
+text-align : justify;
 }
 #b42{
 position : relative;
