--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@ Gagan Mathematics-Never Stop Learning
 
   <div id='container3'>
   <h1 id='r4'>START ONLINE CLASSES NOW</h1>
-  <button id='r5' onclick="Toggle_Form()">ENROL <i class="fas fa-arrow-right"></i>  </button>
+      <a href="{% url 'add_user_data' %}"><button id='r5'>ENROL <i class="fas fa-arrow-right"></i></button></a>
   </div>
 
 
